OVULA-30 Finish Web Applications Workflow
Finish web applications workflow which now has a
any request is authorized if the server is used as
middleware.

Add cucumber support.

Add a test application which is used by cucumber
features.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect_omniauthable",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An OmniAuth (2.x) server implementation for Node as Connect middleware.",
   "keywords" : ["oauth", "connect", "middleware"],
   "repository": "git@github.com:datenspiel/connect_omniauthable.git",
@@ -19,7 +19,12 @@
     "mocha"     : "*",
     "vows"      : "*",
     "cucumber"  : "latest",
-    "route66"   : "latest"
+    "connect-router"   : "latest",
+    "zombie"    : "latest",
+    "html5"     : "latest",
+    "crema"     : "latest",
+    "haba"      : "latest"
+
   },
   "main": "index.js"
 }
