--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "connect_omniauthable",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "An OmniAuth (2.x) server implementation for Node as Connect middleware.",
   "keywords" : ["oauth", "connect", "middleware"],
   "repository": "git@github.com:datenspiel/connect_omniauthable.git",
   "author": "Daniel Schmidt <dsci@code799.net>",
   "dependencies": {
-    "common-dwarf-mongoose":"https://github.com/datenspiel/common_dwarf_mongoose/tarball/v0.0.6",
+    "common-dwarf-mongoose":"latest",
     "mongoose":"2.5.13",
-    "coffee-script":"1.2.0",
-    "connect":"2.0.3",
+    "coffee-script":">=1.2.0",
+    "connect":"*",
     "underscore":"https://github.com/documentcloud/underscore/tarball/1.3.1",
     "jade":"0.22.0",
     "routematcher": "https://github.com/dsci/javascript-route-matcher/tarball/v0.1.0"
