--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "common_dwarf_mongoose":"latest",
     "mongoose":"2.5.13",
     "coffee-script":">=1.2.0",
-    "connect":"*",
-    "underscore":"https://github.com/documentcloud/underscore/tarball/1.3.1",
+    "connect":"latest",
+    "underscore":"latest",
     "jade":"0.22.0",
     "routematcher": "https://github.com/dsci/javascript-route-matcher/tarball/v0.1.0"
   },
